2006-12-19  Nurdin Premji  <npremji@redhat.com>

	* LinuxPtraceTaskState.java (.transitionToAttached): notify Task of 
	transition.
	* ProcBlockAction.java (ProcBlockAction): return/exit after addFailed call.
	* Task.java: Added variable taskStateAttached, fills isa on attach.
	(notifyExeced): Clear isa using clearIsa rather than isa = null.

2006-12-18  Nurdin Premji  <npremji@redhat.com>

	* TestProcStopped.java (MyTester.addFailed): Added.
	* TestProcForceDetach.java (MyProcBlockAction.addFailed): Added.
	* ProcBlockAction.java (ProcBlockAction): Added call to addFailed if proc
	has bad ownership.
	(deletedFrom): Added empty stub method here.	

2006-12-15  Andrew Cagney  <cagney@redhat.com>

	* TestTaskObserver.java (testDetachExitingMainTask)
	(testDetachExitingOtherTask): Note broken, 3737.
	* TestProcStopped.java (testMultiThreadedStoppedDetached)
	(testMultiThreadedStoppedAckDaemon): Note broken, 3595.
	* TestRefresh.java (testRefreshZombie): Note broken, 3488.
	* TestProcTasksObserver.java (testCloneThenKillAttached)
	(testDeleteAttached): Note broken, 3486.

	* TestTaskTerminateObserver.java (check): Mark anything involving
	exit(47) or SIGKILL as broken, 3489.

2006-12-15  Nurdin Premji  <npremji@redhat.com>

	* ProcException.java: Removed.
	* ProcBlockAction.java: Reverted ProcException.
	* TestProcForceDetach: Ditto.
	* TestProcStopped: Ditto.

2006-12-15  Mike Cvet  <mcvet@redhat.com>

	* TestLib.java (AttachedSyscallDaemonProcess): Cleaned up, fixed.
	(AttachedSyscallDaemonProcess.deleteObservers): Added.

2006-12-15  Nurdin Premji  <npremji@redhat.com>

	* ProcException.java (ProcException): Added.	
	* TestProcForceDetach.java (MyProcBlockAction): Renamed from MyObserver.
	(MyProcBlockAction.MyProcBlockAction): 	throw ProcException.
	(requestRemove): catch ProcException
	* ProcBlockAction.java (.execute): Moved null proc and proc ownerships to ..
	(ProcBlockAction): here. Throw exception on null proc and proc ownership.	