@@ -1,3 +1,8 @@
+2006-12-19  Andrew Cagney  <cagney@redhat.com>
+
+	* IsaFactory.java: For i386, only return Ia32On64 when build
+	system was x86-64.  HACK!!
+
 2006-12-19  Nurdin Premji  <npremji@redhat.com>
 
 	* LinuxPtraceTaskState.java (.transitionToAttached): notify Task of 
